ci: use only a single label for Github Actions runners The next version of Action Runner Controller will no longer support having multiple labels on runners, this PR removes all additional labels from workflows.

--- a/.github/workflows/update-version-on-release.yml
+++ b/.github/workflows/update-version-on-release.yml
@@ -22,7 +22,7 @@ permissions:
 
 jobs:
   update_and_push:
-    runs-on: [ self-hosted, linux ]
+    runs-on: unity-linux-runner
 
     steps:
       - uses: actions/checkout@v2
