--- a/.github/workflows/codeowners-validator.yml
+++ b/.github/workflows/codeowners-validator.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   validate:
-    runs-on: self-hosted
+    runs-on: unity-linux-runner
     steps:
       - uses: actions/checkout@v2
       - uses: actions/codeowners-validator@7f3f5e28c6d7b8dfae5731e54ce2272ca384592f
